--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,10 @@ spring.h2.console.path=/h2-ui
 spring.jpa.properties.hibernate.event.merge.entity_copy_observer=allow
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
+
+gitminer.sincecommits=2
+gitminer.sinceissues=20
+gitminer.maxpages=2
+
+githubminer.baseuri = https://api.github.com/repos/
+githubminer.token = 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
